feat: user api controller + user service with user response dto