@@ -1,19 +1,10 @@
 package com.trade.icesi_trade.Service.Impl;
 
-import java.time.LocalDateTime;
-import java.util.NoSuchElementException;
-import java.util.ArrayList;
-import java.util.List;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.stereotype.Service;
-
 import com.trade.icesi_trade.Service.Interface.UserService;
+import com.trade.icesi_trade.Service.Interface.RoleService;
 import com.trade.icesi_trade.dtos.RegisterDto;
+import com.trade.icesi_trade.dtos.UserResponseDto;
+import com.trade.icesi_trade.mappers.UserMapper;
 import com.trade.icesi_trade.model.Role;
 import com.trade.icesi_trade.model.User;
 import com.trade.icesi_trade.model.UserRole;
@@ -21,30 +12,84 @@ import com.trade.icesi_trade.repository.UserRepository;
 import com.trade.icesi_trade.repository.UserRoleRepository;
 
 import jakarta.transaction.Transactional;
-  
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.userdetails.*;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.stereotype.Service;
+
+import java.time.LocalDateTime;
+import java.util.*;
+import java.util.stream.Collectors;
+
 @Service
-public class UserServiceImpl implements UserDetailsService, UserService {
+public class UserServiceImpl implements UserService, UserDetailsService {
 
     @Autowired
-    private  UserRepository userRepository;
+    private UserRepository userRepository;
 
     @Autowired
-    private  UserRoleRepository userRoleRepository;
+    private UserRoleRepository userRoleRepository;
 
     @Autowired
-    private  RoleServiceImpl roleService;
+    private RoleService roleService;
+
+    @Autowired
+    private UserMapper userMapper;
 
     @Autowired
     private BCryptPasswordEncoder passwordEncoder;
 
     @Override
+    public List<UserResponseDto> getAllUsers() {
+        return userRepository.findAll()
+                .stream()
+                .map(userMapper::entityToDto)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public UserResponseDto getUserById(Long id) {
+        return userMapper.entityToDto(findUserById(id));
+    }
+
+    @Override
+    @Transactional
+    public User register(RegisterDto dto) {
+        if (userRepository.findByEmail(dto.getEmail()).isPresent()) {
+            throw new IllegalArgumentException("Ya existe un usuario con ese correo");
+        }
+
+        User user = User.builder()
+                .email(dto.getEmail())
+                .password(passwordEncoder.encode(dto.getPassword()))
+                .name(dto.getName())
+                .phone(dto.getPhone())
+                .createdAt(LocalDateTime.now())
+                .build();
+
+        User savedUser = userRepository.save(user);
+
+        Role defaultRole = roleService.findRoleByName("ROLE_USER");
+        UserRole userRole = UserRole.builder()
+                .user(savedUser)
+                .role(defaultRole)
+                .build();
+        userRoleRepository.save(userRole);
+
+        return savedUser;
+    }
+
+    @Override
     public User findUserByEmail(String email) {
-        return userRepository.findByEmail(email).orElseThrow(() -> new NoSuchElementException("Usuario no encontrado."));
+        return userRepository.findByEmail(email)
+                .orElseThrow(() -> new NoSuchElementException("Usuario no encontrado."));
     }
 
     @Override
     public User findUserById(Long id) {
-        return userRepository.findById(id).orElseThrow(() -> new NoSuchElementException("Usuario no encontrado."));
+        return userRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Usuario no encontrado."));
     }
 
     @Override
@@ -54,110 +99,73 @@ public class UserServiceImpl implements UserDetailsService, UserService {
 
     @Override
     public User saveUser(User user) {
-        if (user.getId() == null || user.getEmail() == null) {
-            throw new IllegalArgumentException("El usuario debe tener al menos un ID y un email.");
-        }
-        if (userRoleRepository.countByUser_Id(user.getId()) == 0) {
-            throw new IllegalArgumentException("El usuario debe tener al menos un rol asignado.");
+        if (user.getEmail() == null) {
+            throw new IllegalArgumentException("El correo es obligatorio.");
         }
 
-        String password = passwordEncoder.encode(user.getPassword());
-        user.setPassword(password);
+        if (user.getPassword() != null && !user.getPassword().startsWith("$2a$")) {
+            user.setPassword(passwordEncoder.encode(user.getPassword()));
+        }
 
-        user.setCreatedAt(LocalDateTime.now());
+        if (user.getCreatedAt() == null) {
+            user.setCreatedAt(LocalDateTime.now());
+        }
+
         return userRepository.save(user);
     }
 
     @Override
     public void deleteUser(Long userId) {
         if (!userRepository.existsById(userId)) {
-            throw new IllegalArgumentException("El usuario no existe.");
+            throw new NoSuchElementException("Usuario no encontrado.");
         }
         userRepository.deleteById(userId);
     }
 
     @Override
-    public User updateUser(User user, Long id) {
-        if (user.getId() == null || user.getEmail() == null) {
-            throw new IllegalArgumentException("El usuario debe tener al menos un ID y un email.");
-        }
-        User existingUser = userRepository.findById(id).orElseThrow(() -> new NoSuchElementException("Usuario no encontrado."));
-        existingUser.setEmail(user.getEmail());
-        existingUser.setName(user.getName());
-        existingUser.setPhone(user.getPhone());
-        existingUser.setPassword(user.getPassword());
-        existingUser.setUpdatedAt(LocalDateTime.now());
-        return userRepository.save(existingUser);
+    public UserResponseDto updateUser(UserResponseDto dto, Long id) {
+        User existing = findUserById(id);
+        existing.setEmail(dto.getEmail());
+        existing.setName(dto.getName());
+        existing.setPhone(dto.getPhone());
+        existing.setUpdatedAt(LocalDateTime.now());
+        User saved = userRepository.save(existing);
+        return userMapper.entityToDto(saved);
     }
 
+    @Override
     @Transactional
     public void updateUserRoles(Long userId, List<Long> newRoleIds) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-    
-        List<UserRole> existingRoles = userRoleRepository.findByUser_Id(userId);
-        userRoleRepository.deleteAllInBatch(existingRoles); 
-    
-        List<Long> distinctIds = newRoleIds.stream().distinct().toList();
-    
-        List<Role> newRoles = roleService.findAllById(distinctIds);
-        for (Role role : newRoles) {
+        User user = findUserById(userId);
+        List<UserRole> currentRoles = userRoleRepository.findByUser_Id(userId);
+        userRoleRepository.deleteAllInBatch(currentRoles);
+
+        List<Role> roles = roleService.findAllById(newRoleIds.stream().distinct().toList());
+        roles.forEach(role -> {
             UserRole ur = UserRole.builder()
                     .user(user)
                     .role(role)
                     .build();
             userRoleRepository.save(ur);
-        }
+        });
     }
-    
+
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        User user = userRepository.findByEmail(email).orElseThrow(() -> new UsernameNotFoundException(email, null));
-        List<UserRole> roles = user.getUserRoles();
+        User user = findUserByEmail(email);
 
-        List<GrantedAuthority> auths = new ArrayList<>();
-        if(roles != null && !roles.isEmpty()) {
-            auths = roles.stream()
-                    .map(userRole -> (GrantedAuthority)() -> userRole.getRole().getName())
-                    .toList();
-        }
+        List<GrantedAuthority> authorities = user.getUserRoles().stream()
+                .map(ur -> (GrantedAuthority) () -> ur.getRole().getName())
+                .collect(Collectors.toList());
 
-        UserDetails userDetails = org.springframework.security.core.userdetails.User.withUsername(user.getEmail())
+        return org.springframework.security.core.userdetails.User
+                .withUsername(user.getEmail())
                 .password(user.getPassword())
-                .authorities(auths)
+                .authorities(authorities)
                 .accountExpired(false)
                 .accountLocked(false)
                 .credentialsExpired(false)
                 .disabled(false)
                 .build();
-
-        return userDetails;
     }
-
-    @Override
-    @Transactional
-    public User register(RegisterDto dto) {
-
-        if (userRepository.findByEmail(dto.getEmail()).isPresent()) {
-            throw new IllegalArgumentException("Ya existe un usuario con ese correo");
-        }
-        User u = new User();
-        u.setEmail(dto.getEmail());
-        u.setPassword(passwordEncoder.encode(dto.getPassword()));
-        u.setName(dto.getName());
-        u.setPhone(dto.getPhone());
-        u.setCreatedAt(LocalDateTime.now());
-        User saved = userRepository.save(u);
-
-        // 2) asigno “ROLE_USER”
-        Role userRole = roleService.findRoleByName("ROLE_USER");
-        UserRole ur = UserRole.builder()
-                            .user(saved)
-                            .role(userRole)
-                            .build();
-        userRoleRepository.save(ur);
-
-        return saved;
-    }
-    
 }
